--- a/Chem.html
+++ b/Chem.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html>
 
 	<head>
@@ -6,7 +7,7 @@
 	</head>
 
 	<body>
-		<input id="InputTest"></input>
+		<input id="InputTest">
 		<button id="SolveTest"></button>
 		<table>
 			<tr id="molec">
