add updater input

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 	</head>
 
 	<body>
-		<input id="InputTest">
-		<button id="SolveTest"></button>
+		<input id="in" onKeyUp="thing()">
 		
 		<!-- Here is where the prettiness starts -->
 		<div id="box">
