optimize for errors

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 				<p>Molecule</p>
 				<p>Atomic Weight</p>
 				<p>Weight Ratio</p>
+				<p>Adjustible</p>
 			</div>
 		</div>
 		<script src="chem.js"></script>
