--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 	<body>
 		<input id="in" onKeyUp="thing()">
-		
-		<!-- Here is where the prettiness starts -->
+
+		<!-- WHy is it so scary? -->
 		<div id="box">
 			<div>
 				<p>Molecule</p>
