--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 		<div id="box">
 			<div>
 				<p>Molecule</p>
-				<p>Atomic Weight</p>
+				<p>Molecular Weight</p>
 				<p>Weight Ratio</p>
-				<p>Adjustible</p>
+				<p>Input</p>
+				<p>Output</p>
 			</div>
 		</div>
 		<script src="chem.js"></script>
