--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 	</head>
 
 	<body>
-		<table>Stokiometry</table>
 		<input id="in" onKeyUp="thing()">
 
 		<!-- WHy is it so scary? -->
@@ -22,7 +21,7 @@
 				<p>Output</p>
 			</div>
 		</div>
-		<p id="FOut"></p>
+		<h2 id="FOut"></h2>
 		<script src="chem.js"></script>
 	</body>
 
