--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 	</head>
 
 	<body>
-		<input id="in" onKeyUp="thing()">
-
+		<span id="topThingy">
+			<div><input id="in" onKeyUp="thing()"></div>
+			<div id="warningS"><p id="warning">Equation couldn't be ballanced.</p></div>
+		</span>
 		<div id="box">
 			<div>
 				<p>Molecule</p>
