fix default equation

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<body>
 		<span id="topThingy">
-			<div><input id="in" onKeyUp="thing()"></div>
+			<div><input id="in" onKeyUp="thing()" value="H2O+CO2=C6H12O6+O2"></div>
 			<div id="warningS"><p id="warning">Equation couldn't be ballanced.</p></div>
 		</span>
 		<div id="box">
