move warning message

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
 	<body>
 		<span id="topThingy">
-			<div><input id="in" onKeyUp="thing()" value="H2O+CO2=C6H12O6+O2"></div>
-			<div id="warningS"><p id="warning">Equation couldn't be ballanced.</p></div>
+			<div>
+                <input id="in" onKeyUp="thing()" value="H2O+CO2=C6H12O6+O2">
+            </div>
 		</span>
 		<div id="box">
 			<div>
@@ -22,7 +23,8 @@
 				<p>Output</p>
 			</div>
 		</div>
-		<h2 id="FOut"></h2>
+        <p id="warning"></p>
+		<p id="FOut"></p>
 		<script src="chem.js"></script>
 	</body>
 
