--- a/index.html
+++ b/index.html
@@ -2,13 +2,19 @@
 <html>
 
 	<head>
-		<title>Chem?</title>
+		<title>The Chemistry Super Solver</title>
 		<link rel="stylesheet" type="text/css" href="chem.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 	</head>
 
 	<body>
+        <p id="instux"><strong>Features:</strong></p>
+        <ul>
+            <li>Balancing: if possible, the equation will be balanced with coefficients.</li>
+            <li>K efficiancy: enter the weight of a reactant and the weight of a product.</li>
+            <li>Limiting reagent:enter the weights of two reactants.</li>
+        </ul>
 		<span id="topThingy">
 			<div>
                 <input id="in" onKeyUp="thing()" value="H2O+CO2=C6H12O6+O2">
