--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <p id="instux"><strong>Features:</strong></p>
         <ul>
             <li>Balancing: if possible, the equation will be balanced with coefficients.</li>
-						<li>Stoikiometry: enter a value to calculate all other weights</li>
+						<li>Stoikiometry: Given a chemical equation, enter a value to calculate all other weights</li>
             <li>K efficiancy: enter the weight of a reactant and the weight of a product.</li>
             <li>Limiting reagent: enter the weights of two reactants.</li>
         </ul>
@@ -25,7 +25,7 @@
 				<p>Output</p>
 			</div>
 		</div>
-    <p id="warning"></p>
+        <p id="warning"></p>
 		<p id="FOut"></p>
 		<script src="chem.js"></script>
 	</body>
